# ChangeLog for app-crypt/gnupg
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/gnupg/ChangeLog,v 1.596 2015/04/17 09:13:05 k_f Exp $

*gnupg-2.1.3-r2 (17 Apr 2015)

  17 Apr 2015; Kristian Fiskerstrand <k_f@gentoo.org> +gnupg-2.1.3-r2.ebuild,
  -gnupg-2.1.3-r1.ebuild:
  Remove the warning about being a developer version that showed up due to the
  LDAP fix

  14 Apr 2015; Mikle Kolyada <zlogene@gentoo.org> gnupg-2.1.3-r1.ebuild:
  Add ~amd64 keyword wrt bug #546478

  14 Apr 2015; Jeroen Roovers <jer@gentoo.org> gnupg-2.1.3-r1.ebuild:
  Marked ~hppa (bug #546478).

*gnupg-2.1.3-r1 (13 Apr 2015)

  13 Apr 2015; Kristian Fiskerstrand <k_f@gentoo.org>
  +files/gnupg-2.1.3-gpg-fix-null-segv.patch, +gnupg-2.1.3-r1.ebuild,
  -gnupg-2.1.3.ebuild:
  Add fix for NULL-segv due to invalid imported data, reported by Hanno Böck.

  13 Apr 2015; Kristian Fiskerstrand <k_f@gentoo.org>
  +files/gnupg-2.1.3-dirmngr-no-ldap.patch, gnupg-2.1.3.ebuild:
  Fix build when ldap useflag is not set, bug #546348

  12 Apr 2015; Kristian Fiskerstrand <k_f@gentoo.org> gnupg-2.1.3.ebuild:
  Remove --enable-agent from ebuild as this is a hard requirement in 2.1 and the
  option is removed

*gnupg-2.1.3 (11 Apr 2015)

  11 Apr 2015; Kristian Fiskerstrand <k_f@gentoo.org>
  +files/gnupg-2.1.3-dirmngr-Fix-segfault-in-ldap-engine.patch,
  +gnupg-2.1.3.ebuild, -gnupg-2.1.2.ebuild:
  New upstream release 2.1.3

  30 Mar 2015; Agostino Sarubbo <ago@gentoo.org> gnupg-1.4.19.ebuild:
  Stable for alpha, wrt bug #541568

  30 Mar 2015; Agostino Sarubbo <ago@gentoo.org> gnupg-1.4.19.ebuild:
  Stable for sparc, wrt bug #541568

  30 Mar 2015;  <tgall@gentoo.org> gnupg-2.0.26-r3.ebuild:
  stable on arm64

  26 Mar 2015; Agostino Sarubbo <ago@gentoo.org> gnupg-1.4.19.ebuild:
  Stable for ppc64, wrt bug #541568

  26 Mar 2015; Agostino Sarubbo <ago@gentoo.org> gnupg-1.4.19.ebuild:
  Stable for ppc, wrt bug #541568
