@@ -17,16 +17,15 @@ EBUILD gnupg-1.4.18.ebuild 3763 SHA256 37cedb3946b555e83111f5096b3dd73f950617597
 EBUILD gnupg-1.4.19.ebuild 3472 SHA256 e2d789f8ddd23866340e7e2cd450e7d7c51ea135e403571ec00873e85e04a4a1 SHA512 e4b5eb1b1d03762528464596316e433ec2b01330cd76ce5a7d7006ba77f8b7dda2d15e66f8574803a229fb5f543c587fe01b82ad981bb7a26c7ad7c2d86d7f7e WHIRLPOOL 9452157d05e9fc515af5b1d71bc14c820ac09337d6b3ac5ff66bca45a7de1ea50958f42bfdc6aee3f27e2596997efe36a473e7053bd904e144c73c3fbbc3a17e
 EBUILD gnupg-2.0.26-r3.ebuild 4889 SHA256 d68393d52300de25451d6e732c7c10484f31283b560988e4992e9ac8fed0874a SHA512 5cc4f633741c32f244aa43eb4606a339e9de7b0d7ceb6cc38bdc985293efc605abcaafe438d0d60250d30f1cf7923a92a093d854f2abb28b302a8ff385b4cfc9 WHIRLPOOL 3d5df13d06a20c6cb53ca9259a416e7f0fc6490331d19ba4b98508d1dd18ddbcfe19913ce0a8fb61071c5a4ed38e8d9dca68b79f22ceb97890ce8236dd2e739c
 EBUILD gnupg-2.0.27.ebuild 4782 SHA256 5453bd69096075d8866a4877b6dbc3efa03a85ae8cbee63ff72269741749545e SHA512 6fa97736a7995c4f6a0095453bfdc0a627c9915da1e7442a65933532aa2ec7d21fdc69ae1cc1b32147731927eaa3cd1716715fdc8dcd969956201649a9da23ce WHIRLPOOL f9f7fe16b87194311f24f9699c561248faec2600fb632a9bd14a205e5ba8092826c7167e895968ea516d6b260f5bc618faf412cd5e5df0198d04891f7ad2c4f1
-EBUILD gnupg-2.1.3-r2.ebuild 5166 SHA256 7fa8b5c9e3cedb62fff3d67cf87494aa5ffd2c7751e41086cf9c087b861ba757 SHA512 24a2f6d75a8804e9d818b173a6b1f9c6976912ab77f925732e38520a415a3ba3516a7d7d38ca0ff483fac0c1c9d0f2ca13e6355c596a2d98090f45caf383c856 WHIRLPOOL c12b73d16095f129031f0e6c917c253ce0a6b2b692d4f2dda7ae0d5bfd3aa362228b7f5a48ef43a7b0407d7ef073017acb2d1b5e0f7b92de41c7cc6e166d31eb
-MISC ChangeLog 87236 SHA256 caf67016e7eb554f98dbb5c7ae4df6159f3bbfe01c1dc41be202f990a07c0897 SHA512 62645a15feed47eafa8f26be72a3a6e24ceb0bb89ec89d0f8496439e4dc039b9158dc8aa643185af587e8a161d8a4aa8d2f8aca195a86682e80c667646c198b4 WHIRLPOOL 35a1db2ac8c7215eca2b7679dc44cc222bd93b4680123bb876a21b7cc721b37c3d314df77122ceba7d11423841f8ac71a46943649078415f919a54c871d66947
+EBUILD gnupg-2.1.3-r2.ebuild 5148 SHA256 0a6dc6fb20504d8b1e04620dd48d4b88a2f514aa3cd266ccb4a1145e95ff3161 SHA512 9d0e6dc75135f20d60c6a61fdb2ae5ae967fa1dbc56f2a1343dd474105d93ce2363daecd31e5260f8acda02d4d2adaf16cebee556e5a50503d0a88b4f40e2915 WHIRLPOOL 3471a9d7ec8454481c1b4f495b70b7d50a717971c4b019a121ac66ff445e2626b5781bc17b91f8798e544b3f20aa37182dac03e2104461d26a83e491746b84ea
+MISC ChangeLog 87327 SHA256 9134c30e32b8d5bc97f0847af9316cddf3aacd0dce6e4ed21193ef7fc2fd3926 SHA512 fb2c1d2ec8b99aba131084f24026f428a62d919c6dd35eac7c631451376aae169b84c8df7857e62b6519b1683b7f2d894f3b1a519765659b84f7b068131585bb WHIRLPOOL b6cc8257214fe8aa07c1e323067582193ca7bd15098404ff685e3db2061d8c8f05b1311ca4bcffb4934768344f31a764a4856d64709f4678c36e2a6336dd4e28
 MISC metadata.xml 1032 SHA256 cbef1621eb1364c8d12ac18e71cf4aabfced9ecd3c990a3f3cdf066902dc97bb SHA512 5e2ef4380effe027a0b0b8a11a29ed1996b3b5256ee333909d4a7cfcb18ea1e9dead9b8303c7dffc1ad10014dea79e827b1d84caa92294f4d3dfc29ff23a6af5 WHIRLPOOL a24c7f71ed140f34dd59b10314869d0c5482063be20faefa1591595feb856c79bc57a6b344dd467875cf3389d8cd14e2d41f2312f51d3b77dcbe27af97b7f129
 -----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
 
-iQEcBAEBCAAGBQJVMM6lAAoJEP7VAChXwav62aYH+wcSoqJPJZi8lE5MK/NXDZBs
-BtNV+w2pn1FXkJ1a3Ak2cNaDyZgA4RR42t4UkuzOjW1QMiOIPD0o+MeKKMx4hW7l
-rho+Nc1PyLSctu7YLnswwZVeAUYbldb8nwPG8KogfDP1dEGQ/3zQxLdsjVv7zdev
-KVzz62t4+ew63mAtxdIePFZrELBWaTNGK/PlYZtDR5mtFh0MB7BJ3rc7sMcry6/r
-exThrVNO6eR8N1My7RPKwLQ6vU12WjzylTst1JlSUEaB8M2oSWtEsAX0DXlLn6r7
-Ch73mnXZCBuuGxgyRZVy9N0uvKMUt5QTLdS6agvVUpF+ux6c58D8qGM1gkfjYJk=
-=S+Ra
+iJwEAQEIAAYFAlUxDEgACgkQG9wOWsQutdZxegQAz3arm+zExL0op8vLrpaP2rUf
+yckRKpRCPbH1+/nDth8XtjWsBp8/jsFpELM2awVYVUVP0KDRqKFg+HJPQFjKFTYx
+JDz1ZEkGvmRSQ9eCt7XvCehukcuTtbGcN1DoaVksAAKsNzVbSFdRCWboAIvIO0VB
+jr1E+t5578i3h1uc6Z8=
+=T8OV
 -----END PGP SIGNATURE-----
