@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/gnupg
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/gnupg/ChangeLog,v 1.596 2015/04/17 09:13:05 k_f Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/gnupg/ChangeLog,v 1.597 2015/04/17 13:38:01 zlogene Exp $
+
+  17 Apr 2015; Mikle Kolyada <zlogene@gentoo.org> gnupg-2.1.3-r2.ebuild:
+  Whitespace
 
 *gnupg-2.1.3-r2 (17 Apr 2015)
 
